# celery-getting-started

./: README.md  docker-compose.yml  pyproject.toml
basic/: tasks.py
celery/: Dockerfile  celeryconfig.py  pyproject.toml  tasks.py  workflows.py
