[tool.poetry]
name = "celery-getting-started"
version = "0.1.0"
description = ""
authors = ["Hank Ehly <henry.ehly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
celery = "^4.3"
redis = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
